--- a/pages/page2.html
+++ b/pages/page2.html
@@ -6,12 +6,55 @@
   <title>GCC Tools - Page 2</title>
   <link rel="stylesheet" href="../style.css">
   <style>
+    /* Header layout */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+    }
+
+    header .back-button {
+      font-size: 20px;
+      padding: 10px 25px;
+      border: none;
+      border-radius: 20px; 
+      cursor: pointer;
+      color: white;
+      font-weight: bold;
+      background: linear-gradient(45deg, #d32769, #2184b9); 
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
+    }
+
+    header .back-button:hover {
+      background: linear-gradient(45deg, #ef5576, #0d3c6d);
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    header .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    header .logo img {
+      height: 50px;
+      width: auto;
+    }
+
+    header .logo h1 {
+      font-size: 24px;
+      color: #0e4d4d;
+    }
+
     /* Page content layout */
     .content {
       display: flex;
-      justify-content: center; /* Center horizontally */
-      align-items: center;     /* Center vertically */
-      height: calc(100vh - 200px); /* Subtract header and footer height */
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 200px); 
     }
 
     /* Card grid */
@@ -65,15 +108,30 @@
       transform: scale(1.05);
       box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #ffffff;
+      box-shadow: 0 -2px 8px rgba(0,0,0,0.05);
+    }
+
+    footer p {
+      margin: 5px 0;
+      color: #333;
+    }
+
   </style>
 </head>
 <body>
 
   <!-- Header -->
   <header>
+    <button class="back-button" onclick="history.back()">&#8592;</button>
     <div class="logo">
       <img src="../assets/logo.png" alt="Logo">
-      <h1>GCC Tools</h1>
+      <h1>Documentation</h1>
     </div>
   </header>
 
@@ -103,7 +161,6 @@
   <!-- Footer -->
   <footer>
     <p>Designed Mohammed Ma'mon</p>
-    <p>&copy; 2025 GCC Nahdi. All rights reserved.</p>
   </footer>
 
 </body>
