--- a/home.html
+++ b/home.html
@@ -195,6 +195,11 @@
       cardEl.appendChild(titleEl);
       cardGrid.appendChild(cardEl);
     });
+      window.addEventListener('pageshow', function(event) {
+    if (event.persisted || performance.getEntriesByType("navigation")[0].type === 'back_forward') {
+      window.location.reload();
+    }
+  });
   </script>
 
 </body>
