--- a/pages/page3.html
+++ b/pages/page3.html
@@ -147,7 +147,7 @@
     <button class="back-button" onclick="goBack()">&#8592;</button>
     <div class="logo">
       <img src="../assets/logo.png" alt="Logo">
-      <h1>GCC Tools</h1>
+      <h1>Orders</h1>
     </div>
   </header>
 
