--- a/pages/page2.html
+++ b/pages/page2.html
@@ -6,7 +6,17 @@
   <title>GCC Tools - Page 2</title>
   <link rel="stylesheet" href="../style.css">
   <style>
-    /* Header layout */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Tajawal', sans-serif;
+      opacity: 0; /* fade-in effect */
+      transition: opacity 0.8s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
     header {
       display: flex;
       justify-content: space-between;
@@ -49,7 +59,6 @@
       color: #0e4d4d;
     }
 
-    /* Page content layout */
     .content {
       display: flex;
       justify-content: center;
@@ -57,7 +66,6 @@
       height: calc(100vh - 200px); 
     }
 
-    /* Card grid */
     .card-grid {
       display: grid;
       grid-template-columns: repeat(2, minmax(250px, 1fr));
@@ -65,7 +73,6 @@
       justify-items: center;
     }
 
-    /* Card styling */
     .card {
       background-color: #e8f3ee;
       border-radius: 30px;
@@ -89,7 +96,6 @@
       box-shadow: 0 12px 25px rgba(0,0,0,0.25);
     }
 
-    /* Button styling */
     .card button {
       padding: 12px 25px;
       font-size: 16px;
@@ -109,7 +115,6 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
 
-    /* Footer */
     footer {
       text-align: center;
       padding: 20px;
@@ -126,29 +131,24 @@
 </head>
 <body>
 
-  <!-- Header -->
   <header>
-    <button class="back-button" onclick="history.back()">&#8592;</button>
+    <button class="back-button" onclick="goBack()">&#8592;</button>
     <div class="logo">
       <img src="../assets/logo.png" alt="Logo">
       <h1>Documentation</h1>
     </div>
   </header>
 
-  <!-- Background -->
   <div class="background"></div>
 
-  <!-- Content -->
   <div class="content">
     <div class="card-grid">
-      <!-- Card 1 -->
       <div class="card">
         <span>Right Now</span>
         <button onclick="window.open('https://login.microsoftonline.com/94284066-f21c-410a-98f6-52cba42c94db/saml2', '_blank')">
           Open
         </button>
       </div>
-      <!-- Card 2 -->
       <div class="card">
         <span>Templates</span>
         <button onclick="window.open('https://docs.google.com/spreadsheets/d/1WXZ1BICRAitvuYAkBjx4m2RYeE3yxYPfBYZS342RPVc/edit?gid=166767670&amp;range=A1', '_blank')">
@@ -158,10 +158,24 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer>
     <p>Designed Mohammed Ma'mon</p>
   </footer>
+
+  <script>
+    // fade-in on page load
+    window.addEventListener('DOMContentLoaded', () => {
+      document.body.style.opacity = 1;
+    });
+
+    // go back with fade-out effect
+    function goBack() {
+      document.body.style.opacity = 0;
+      setTimeout(() => {
+        history.back();
+      }, 800);
+    }
+  </script>
 
 </body>
 </html>
