--- a/pages/page6.html
+++ b/pages/page6.html
@@ -142,7 +142,7 @@
     <button class="back-button" onclick="goBack()">&#8592;</button>
     <div class="logo">
       <img src="../assets/logo.png" alt="Logo">
-      <h1><Portal></Portal></h1>
+      <h1>Portal</h1>
     </div>
   </header>
 
